--- a/index.html
+++ b/index.html
@@ -13,28 +13,39 @@
             <p id="input">0</p>
         </div>
         <div class="keys">
-            <button class="btn clear">C</button>
-            <button class="btn modifier">%</button>
-            <button class="btn delete"><svg viewBox="0 -960 960 960">
-    <path d="m456-320 104-104 104 104 56-56-104-104 104-104-56-56-104 104-104-104-56 56 104 104-104 104 56 56Zm-96 160q-19 0-36-8.5T296-192L80-480l216-288q11-15 28-23.5t36-8.5h440q33 0 56.5 23.5T880-720v480q0 33-23.5 56.5T800-160H360ZM180-480l180 240h440v-480H360L180-480Zm400 0Z"/>
-  </svg></button>
-            <button class="btn operator">/</button>
-            <button class="btn number">7</button>
-            <button class="btn number">8</button>
-            <button class="btn number">9</button>
-            <button class="btn operator">*</button>
-            <button class="btn number">4</button>
-            <button class="btn number">5</button>
-            <button class="btn number">6</button>
-            <button class="btn operator">-</button>
-            <button class="btn number">1</button>
-            <button class="btn number">2</button>
-            <button class="btn number">3</button>
-            <button class="btn operator">+</button>
-            <button class="btn modifier">+/-</button>
-            <button class="btn number">0</button>
-            <button class="btn modifier">.</button>
-            <button class="btn equals">=</button>
+            <div class="row">
+                <button class="btn clear">C</button>
+                <button class="btn modifier">%</button>
+                <button class="btn delete">
+                <svg viewBox="0 -960 960 960">
+                    <path d="m456-320 104-104 104 104 56-56-104-104 104-104-56-56-104 104-104-104-56 56 104 104-104 104 56 56Zm-96 160q-19 0-36-8.5T296-192L80-480l216-288q11-15 28-23.5t36-8.5h440q33 0 56.5 23.5T880-720v480q0 33-23.5 56.5T800-160H360ZM180-480l180 240h440v-480H360L180-480Zm400 0Z"/>
+                    </svg></button>
+                <button class="btn operator">/</button>
+            </div>
+            <div class="row">
+                <button class="btn number">7</button>
+                <button class="btn number">8</button>
+                <button class="btn number">9</button>
+                <button class="btn operator">*</button>
+            </div>
+             <div class="row">
+                <button class="btn number">4</button>
+                <button class="btn number">5</button>
+                <button class="btn number">6</button>
+                <button class="btn operator">-</button>
+            </div>
+            <div class="row">
+                <button class="btn number">1</button>
+                <button class="btn number">2</button>
+                <button class="btn number">3</button>
+                <button class="btn operator">+</button>
+            </div>
+            <div class="row">
+                <button class="btn modifier">+/-</button>
+                <button class="btn number">0</button>
+                <button class="btn modifier">.</button>
+                <button class="btn equals">=</button>
+            </div>
         </div>
     </div>
 </body>
